Changes in contact email

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:Zohaib-k@proton.me" class="contact-link">Zohaib@online.com</a>
+              <a href="mailto:Zohaib-k@proton.me" class="contact-link">rajazohaib.dev@gmail.com</a>
             </div>
 
           </li>
