--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:Zohaib-k@proton.me" class="contact-link">rajazohaib.dev@gmail.com</a>
+              <a href="mailto:rajazohaib.dev@gmail.com" class="contact-link">rajazohaib.dev@gmail.com</a>
             </div>
 
           </li>
@@ -208,9 +208,9 @@
         <section class="about-text">
           <p>
            
-I am a Full Stack Developer with 3+ years of experience in front-end and back-end technologies, specializing in SEO-optimized web applications. Proficient in HTML, CSS, JavaScript, PHP, and React, I create dynamic, responsive designs for e-commerce and CMS platforms like WordPress and Shopify.
+I am a Web Developer with 2+ years of experience in web development and designing, specializing in SEO-optimized web applications. Proficient in HTML, CSS, JavaScript. I create dynamic, responsive designs for e-commerce and CMS platforms like WordPress Squarespace and Shopify.
 <br>
-Skilled in Divi, Elementor, and custom themes, I deliver exceptional UX/UI and seamless SEO integration. My expertise includes Git, MySQL, MongoDB, third-party service integration, and crafting SEO-optimized blog content. With strong project management and leadership skills, I ensure efficient, high-quality project delivery in collaborative environments.
+Skilled in Divi, Elementor, and custom themes, I deliver exceptional UIs and seamless SEO integration. My expertise includes Git, MySQL, MongoDB, third-party service integration, and crafting SEO-optimized content. With strong project management and leadership skills, I ensure efficient, high-quality project delivery in collaborative environments.
           </p>
         </section>
 
@@ -525,7 +525,7 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UX/UI and s
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Full Stack Developer - Energy Alternatives</h4>
+              <h4 class="h4 timeline-item-title">Web Developer - Energy Alternatives</h4>
               <span>April 1, 2024 — Present</span>
               <p class="timeline-text">
                 Played a critical role in designing and developing the front-end web architecture for cutting-edge
@@ -539,7 +539,7 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UX/UI and s
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Full Stack Developer - Vue Driving School</h4>
+              <h4 class="h4 timeline-item-title">Web Developer - Vue Driving School</h4>
               <span>March 1, 2023 — May 1, 2024</span>
               <p class="timeline-text">
                 Led multiple web development projects, handling both back-end and front-end tasks. Developed
@@ -573,7 +573,7 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UX/UI and s
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Bachelors in Computer Science - Virtual University of Pakistan
               </h4>
-              <span>October 21, 2023 — Present</span>
+              <span>October 21, 2022 — Present</span>
               <p class="timeline-text">
                 Pursuing a degree in Computer Science with a focus on technology, programming, and system
                 architecture. Developed problem-solving and analytical skills while working on various technical
@@ -582,11 +582,10 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UX/UI and s
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Diploma in Full Stack Development - Arfa Technology Software Park</h4>
+              <h4 class="h4 timeline-item-title">Diploma in Web Development - Arfa Technology Software Park</h4>
               <span>February 7, 2024 — February 21, 2023</span>
               <p class="timeline-text">
-                Completed an intensive training program focused on web development, learning a range of front-end and
-                back-end technologies including HTML, CSS, JavaScript, PHP, and databases like MySQL and MongoDB.
+                Completed an intensive training program focused on web development.
               </p>
             </li>
 
