Update avatar image format in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="assets/images/487eea54-a0a8-463e-a753-e74e0ba0a96e.jpg" alt="ZohaibHassan" class="avatar-img" width="80">
+          <img src="assets/images/487eea54-a0a8-463e-a753-e74e0ba0a96ee.png" alt="ZohaibHassan" class="avatar-img" width="80">
         </figure>
 
         <div class="info-content">
