Update education timeline in index.html

--- a/index.html
+++ b/index.html
@@ -579,23 +579,22 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UIs and sea
               </p>
             </li>
 
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Diploma in Web Development - Arfa Technology Software Park</h4>
-              <span>February 7, 2024 — February 21, 2023</span>
-              <p class="timeline-text">
-                Completed an intensive training program focused on web development.
-              </p>
-            </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">O Level - Pre Engineering - Pindi Public School</h4>
+              <h4 class="h4 timeline-item-title">A Level - Pre Engineering - Punjab Colleges</h4>
               <span>August 10, 2020 — April 18, 2021</span>
               <p class="timeline-text">
                 Studied core subjects in science and mathematics, building a strong foundation in engineering concepts,
                 critical thinking, and problem-solving.
               </p>
             </li>
-
+       <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Diploma in Web Development - Arfa Technology Software Park</h4>
+              <span>February 7, 2024 — February 21, 2023</span>
+              <p class="timeline-text">
+                Completed an intensive training program focused on web development.
+              </p>
+            </li>
           </ol>
 
         </section>
