Add API Integration skill to skills list

--- a/index.html
+++ b/index.html
@@ -693,6 +693,14 @@ Skilled in Divi, Elementor, and custom themes, I deliver exceptional UIs and sea
               </div>
             </li>
 
+              <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">API Integration</h5>
+                <data value="55">50%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 55%;"></div>
+              </div>
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">MongoDB</h5>
